syntax = "proto3";

package blog.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc GetBlogsByCampaignID(GetBlogsByCampaignIDRequest) returns (GetBlogsByCampaignIDResponse);
  rpc GetBlogsByUserID(GetBlogsByUserIDRequest) returns (GetBlogsByUserIDResponse);
  rpc DeleteBlog(DeleteBlogRequest) returns (google.protobuf.Empty);
}

message Blog {
  string id = 1;
  int32  user_id = 2;
  string campaign_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateBlogRequest {
  int32  user_id = 1;
  string campaign_id = 2;
  string content = 3;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message GetBlogsByCampaignIDRequest {
  string campaign_id = 1;
}

message GetBlogsByCampaignIDResponse {
  repeated Blog blogs = 1;
}

message GetBlogsByUserIDRequest {
  int32 user_id = 1;
}

message GetBlogsByUserIDResponse {
  repeated Blog blogs = 1;
}

message DeleteBlogRequest {
  string id = 1;        // blog id
  int32  user_id = 2;   // owner check (opsional)
}
